// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отредерить описание без бейджей, если есть только описание 1`] = `
<div
  className="OfferAmpDescription"
>
  <h2
    className="OfferAmpDescription__title"
  >
    Комментарий продавца
  </h2>
  <div
    className="OfferAmpDescription__text"
  >
    <div
      className="OfferAmpDescription__textInner"
    >
      <Memo(OfferAmpDescriptionHTML)
        description="test"
      />
    </div>
  </div>
</div>
`;

exports[`должен отредерить описание с бейджами, если все есть 1`] = `
<div
  className="OfferAmpDescription"
>
  <h2
    className="OfferAmpDescription__title"
  >
    Комментарий продавца
  </h2>
  <div
    className="OfferAmpDescription__badges"
  >
    <div
      className="OfferAmpDescription__badgesItem"
      key="0"
    >
      badge
    </div>
  </div>
  <div
    className="OfferAmpDescription__text"
  >
    <div
      className="OfferAmpDescription__textInner"
    >
      <Memo(OfferAmpDescriptionHTML)
        description="test"
      />
    </div>
  </div>
</div>
`;

exports[`должен отредерить описание с кнопкой "Показать еще", если много текста 1`] = `
<div
  className="OfferAmpDescription"
>
  <h2
    className="OfferAmpDescription__title"
  >
    Комментарий продавца
  </h2>
  <div
    className="OfferAmpDescription__text"
  >
    <div
      className="OfferAmpDescription__textInner"
    >
      <AmpShowMore
        lessText="Скрыть подробности"
        moreText="Показать полностью"
      >
        <Memo(OfferAmpDescriptionHTML)
          description="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        />
      </AmpShowMore>
    </div>
  </div>
</div>
`;
